fix: updated package.jso

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "homepage": "https://ekoopmans.github.io/html2pdf.js/",
   "dependencies": {
     "es6-promise": "^4.2.5",
-    "html2canvas": "^1.0.0",
+    "html2canvas": "github:sanyamjain-plivo/html2canvas",
     "jspdf": "^2.3.1"
   },
   "devDependencies": {
